# video-to-3dgs

./: .gitignore  README.md  gui.py  pyproject.toml  video_3dgs_skeleton.py
configs/: default_config.yaml  user_config.yaml
core/: output_generator.py  processing_engine.py  quality_filter.py  realityscan_interface.py  time_estimator.py  video_extractor.py
models/: config_models.py  data_models.py
scripts/: convert_pano_to_faces.py  run_realityscan_integration.py  setup_environment.py
tests/: mock_alignment_result.xml  test_realityscan_interface.py  test_video_extractor_faces.py
utils/: config_manager.py  cuda_utils.py  logging_utils.py
